[package]
name = "pnova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nova-snark = { git = "https://github.com/microsoft/Nova", rev = "0e86f9acc" }
bellperson = { version = "0.24", default-features = false }
ff = { version = "0.12.0", features = ["derive"] }
pasta_curves = { version = "0.5.2", features = ["repr-c", "serde"], package = "fil_pasta_curves" }
flate2 = "1.0"
bincode = "1.2.1"

[patch."https://github.com/microsoft/Nova"]
nova-snark = { path = "/Users/chao/opensource/nova/nova" }

