[package]
name = "pnova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nova-snark = { git = "https://github.com/microsoft/Nova", rev = "0e86f9acc" }
bellperson = { version = "0.25", default-features = false }
ff = { version = "0.13.0", features = ["derive"] }
pasta_curves = { version = "0.5", features = ["repr-c", "serde"] }
halo2curves = { git = "https://github.com/chaosma/halo2curves", branch = "feature/curve-grumpkin", features = ["derive_serde"] }
flate2 = "1.0"
bincode = "1.2.1"

[patch."https://github.com/microsoft/Nova"]
nova-snark = { path = "/Users/chao/opensource/nova/nova" }

[patch."https://github.com/chaosma/halo2curves"]
halo2curves = { path = "/Users/chao/opensource/appliedzkp/halo2curves" }
